# kharebeney_ai

./: .gitignore  CMakeLists.txt  README.md  diagram.json  sdkconfig  sdkconfig.old  wokwi.toml
.cursor/rules/: rules.mdc
.kilocode/rules/: roles.md
.qoder/rules/: rules.md
docs/: agent_documentation.md  agent_promt.md  cpp_rewrite_prompt.md  example_usage.md  info.md  roadmap.md  set_prompt_implementation.md  speech_system_promt.md
main/: CMakeLists.txt  config.h  demo.cpp  display.h  main.cpp
main/characters/: test.h
main/core/: agentTest.cpp  agentTest.h  balance_manager.cpp  balance_manager.h  embedding.cpp  embedding.h  emotion_system.cpp  emotion_system.h  internal_state.cpp  internal_state.h  kharebeney_agent.cpp  kharebeney_agent.h  learning_system.cpp  learning_system.h  simple_systems.cpp  simple_systems.h
main/fonts/: icons.h
main/lib/: utlis.cpp  utlis.h
main/screen/: menu.cpp  menu.h
main/screen/discipline/: screen_discipline.cpp  screen_discipline.h
main/screen/food/: screen_food.cpp  screen_food.h
main/screen/game/: screen_game.cpp  screen_game.h
main/screen/main/: screen_main.cpp  screen_main.h
main/screen/medicine/: screen_medicine.cpp  screen_medicine.h
main/screen/settings/: screen_settings.cpp  screen_settings.h
main/screen/status/: screen_status.cpp  screen_status.h
main/screen/study/: screen_study.cpp  screen_study.h
main/screen/toilet/: screen_toilet.cpp  screen_toilet.h
