idf_component_register(
    SRCS "main.cpp"
         "screen/menu.cpp"
         "screen/main/screen_main.cpp"
         "screen/food/screen_food.cpp"
         "screen/game/screen_game.cpp"
         "screen/medicine/screen_medicine.cpp"
         "screen/toilet/screen_toilet.cpp"
         "screen/status/screen_status.cpp"
         "screen/study/screen_study.cpp"
         "screen/discipline/screen_discipline.cpp"
         "screen/settings/screen_settings.cpp"
         "lib/utlis.cpp"
         "core/embedding.cpp"
         "core/simple_systems.cpp"
         "core/kharebeney_agent.cpp"
         "core/internal_state.cpp"
         "core/balance_manager.cpp"
         "core/emotion_system.cpp"
         "core/learning_system.cpp"
         "core/agentTest.cpp"
    INCLUDE_DIRS "." "screen" "lib" "core"
    REQUIRES i2cdev ssd1306 esp_timer
)
